# laba7vvp

./: CMakeLists.txt  JsonService.cpp  JsonService.h  Service.cpp  Service.h  Weather.cpp  Weather.h  XmlService.cpp  XmlService.h  main.cpp  weather.xml
